--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
     "embeddings = {}\n",
-    "with open(\"./top_50000.txt\", 'r') as f:\n",
+    "with open(\"./top_50000.txt\", 'r', encoding=\"utf8\") as f:\n",
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('tong', 'wok', 'guan', 'kitchenware', 'nippon', 'torino', 'thanh', 'jian', 'bao', 'jia')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "answers = [\"iron\", \"ham\", \"beijing\"]\n",
     "bad = [\"fall\", \"witch\", \"note\", \"cat\", \"bear\", \"ambulance\"]\n",
@@ -98,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['hole', 'belt', 'needle']\n",
-      "['knife', 'amazon', 'lab', 'press', 'olive', 'truck']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import sample\n",
     "    \n",
@@ -139,10 +112,7 @@
     "    good = sample(codenames_words, 3)\n",
     "    bad = sample(codenames_words, 6)\n",
     "    \n",
-    "    print(good)\n",
-    "    print(bad)\n",
-    "    \n",
-    "    return True\n",
+    "    return good, bad\n",
     "\n",
     "generate(codenames_words)"
    ]
@@ -152,7 +122,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Script takes vocabulary of specific size, randomly generates a set of 9 words {3 good, 6 bad}, and outputs top 10 guesses\n",
+    "good, bad = generate(codenames_words)\n",
+    "print(good, bad)\n",
+    "#clues = tabulate(candidates(answers, bad))\n",
+    "clues = tabulate(candidates(good, bad))\n",
+    "print(clues)\n"
+   ]
   }
  ],
  "metadata": {
@@ -171,9 +148,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
