changed embedding size

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,23 +17,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data\n",
-    "embeddings = {}\n",
+    "# Load all data from massive embeddings file. You only need to do this once\n",
+    "embeddings_all = {}\n",
     "with open(\"./top_50000.txt\", 'r', encoding=\"utf8\") as f:\n",
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
     "        vector = np.asarray(values[1:], \"float32\")\n",
-    "        embeddings[word] = vector"
+    "        embeddings_all[word] = vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose smaller sets of embeddings. \n",
+    "def embeddings_size(embeddings_size, embeddings_all):\n",
+    "    #embeddings_size is the length of the subset of embeddings\n",
+    "    #embeddings_all is the embeddings from 50k top words\n",
+    "    embeddings = {}\n",
+    "    for x in list(embeddings_all)[0:embeddings_size]:\n",
+    "        embeddings[x] = embeddings_all[x]\n",
+    "    #adds words from codenames that don't make it in the top XX words\n",
+    "    for item in codenames_words:\n",
+    "        if item not in embeddings:\n",
+    "            embeddings[item] = embeddings_all[item]\n",
+    "    #\n",
+    "    return embeddings\n",
+    "    \n",
+    "embeddings = embeddings_size(1000, embeddings_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,20 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "answers = [\"iron\", \"ham\", \"beijing\"]\n",
-    "bad = [\"fall\", \"witch\", \"note\", \"cat\", \"bear\", \"ambulance\"]\n",
-    "\n",
-    "clues = tabulate(candidates(answers, bad))\n",
-    "print(clues)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['dress', 'note', 'cross'],\n",
+       " ['tooth', 'ham', 'truck', 'horseshoe', 'head', 'hole'])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#this function takes a random samples from the codenames words\n",
     "from random import sample\n",
     "    \n",
     "def generate(codenames_words): \n",
@@ -119,16 +142,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['death', 'mercury', 'yard'] ['horseshoe', 'england', 'rome', 'teacher', 'net', 'ruler']\n",
+      "('gas', 'parts', 'truck', 'lyrics', 'water', 'car', 'cover', 'engine', 'cause', 'oil')\n"
+     ]
+    }
+   ],
    "source": [
     "#Script takes vocabulary of specific size, randomly generates a set of 9 words {3 good, 6 bad}, and outputs top 10 guesses\n",
     "good, bad = generate(codenames_words)\n",
     "print(good, bad)\n",
     "#clues = tabulate(candidates(answers, bad))\n",
     "clues = tabulate(candidates(good, bad))\n",
-    "print(clues)\n"
+    "print(clues[0])\n"
    ]
   }
  ],
