--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -20,8 +20,9 @@
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
-    "        vector = np.asarray(values[1:], \"float32\")\n",
-    "        embeddings_all[word] = vector\n",
+    "        if len(word) > 1: \n",
+    "            vector = np.asarray(values[1:], \"float32\")\n",
+    "            embeddings_all[word] = vector\n",
     "        \n",
     "codenames_words = []\n",
     "with open(\"./codenames_words.txt\", 'r') as f:\n",
@@ -135,7 +136,7 @@
     "    for i in range(n): \n",
     "        good, bad, clues = generate_single_example(codenames_words, embeddings)\n",
     "        word_string = ', '.join(good + bad + clues) + '\\n'\n",
-    "        output_file.write(word_string)\n",
+    "        output_file.write(str(i) + '.' + word_string)\n",
     "    \n",
     "    output_file.close()\n",
     "    \n",
@@ -179,9 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_n_examples(codenames_words, embeddings_1000, 100, 'examples_1000_vocab.txt')\n",
-    "write_n_examples(codenames_words, embeddings_5000, 100, 'examples_5000_vocab.txt')\n",
-    "write_n_examples(codenames_words, embeddings_10000, 100, 'examples_10000_vocab.txt')"
+    "write_n_examples(codenames_words, embeddings_1000, 100, 'examples_1000_vocab.txt')"
    ]
   },
   {
@@ -189,7 +188,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "write_n_examples(codenames_words, embeddings_5000, 100, 'examples_5000_vocab.txt')\n",
+    "write_n_examples(codenames_words, embeddings_10000, 100, 'examples_10000_vocab.txt')"
+   ]
   }
  ],
  "metadata": {
