added part of speech tags

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start off with replicating Jason Somers \n",
     "# Top 50000 words from glove.42B.300d.zip were written to top_50000.txt\n",
     "\n",
     "# Load libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import spatial\n",
+    "import copy\n",
     "\n",
     "# Load all data from massive embeddings file. You only need to do this once\n",
     "embeddings_all = {}\n",
@@ -20,7 +20,7 @@
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
-    "        if len(word) > 1: \n",
+    "        if len(word) > 1 and word.isalpha(): \n",
     "            vector = np.asarray(values[1:], \"float32\")\n",
     "            embeddings_all[word] = vector\n",
     "        \n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,18 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings_1000 = embeddings_size(1000, embeddings_all)\n",
-    "embeddings_5000 = embeddings_size(5000, embeddings_all)\n",
-    "embeddings_10000 = embeddings_size(10000, embeddings_all)"
+    "#embeddings_1000 = embeddings_size(1000, embeddings_all)\n",
+    "#embeddings_5000 = embeddings_size(5000, embeddings_all)\n",
+    "embeddings_10000 = embeddings_size(10000, embeddings_all)\n",
+    "embeddings_25000 = embeddings_size(25000, embeddings_all)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +79,14 @@
     "\n",
     "def goodness(embeddings, word, answers, bad):\n",
     "    if word in answers + bad: return -999\n",
-    "    return sum([distance(embeddings, word, b) for b in bad]) - 4.0 * sum([distance(embeddings, word, a) \n",
+    "    return sum([distance(embeddings, word, b) for b in bad]) - 1.0 * sum([distance(embeddings, word, a) \n",
     "                                                                          for a in answers])\n",
     "\n",
     "def minimax(embeddings, word, answers, bad):\n",
     "    if word in answers + bad: return -999\n",
     "    return min([distance(embeddings, word, b) for b in bad]) - max([distance(embeddings, word, a) for a in answers])\n",
     "\n",
-    "def candidates(embeddings, answers, bad, size=10):\n",
+    "def candidates(embeddings, answers, bad, size=20):\n",
     "    best = sorted(embeddings.keys(), key=lambda w: -1 * goodness(embeddings, w, answers, bad))\n",
     "    res = [(str(i + 1), \"{0:.2f}\".format(minimax(embeddings, w, answers, bad)), w) \n",
     "           for i, w in enumerate(sorted(best[:250], key=lambda w: -1 * minimax(embeddings, w, answers, bad))[:size])]\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +124,21 @@
     "def generate_single_example(codenames_words, embeddings):\n",
     "    # Generates a single example (good words, bad words, top ten clues)\n",
     "    good = sample(codenames_words, 3)\n",
-    "    bad = sample(codenames_words, 6)\n",
-    "\n",
+    "    bad = sample(codenames_words, 1)\n",
+    "    \n",
+    "    while bad[0] in good: \n",
+    "        bad = sample(codenames_words, 1)\n",
+    "    \n",
     "    clues = candidates(embeddings, good, bad)\n",
+    "    \n",
+    "    # remove plurals\n",
+    "    clues_2 = copy.deepcopy(clues)\n",
+    "    for item in clues_2: \n",
+    "        for word in clues_2: \n",
+    "            if item[:-1] == word: \n",
+    "                clues.remove(item)\n",
     "\n",
-    "    return good, bad, clues\n",
+    "    return good, bad, clues[:10]\n",
     "\n",
     "def write_n_examples(codenames_words, embeddings, n, filename): \n",
     "    # Generates n examples and writes them to filename\n",
@@ -146,6 +157,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -176,11 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_n_examples(codenames_words, embeddings_1000, 100, 'examples_1000_vocab.txt')"
+    "write_n_examples(codenames_words, embeddings_10000, 10, 'examples_10000_vocab.txt')\n",
+    "write_n_examples(codenames_words, embeddings_25000, 10, 'examples_25000_vocab.txt')"
    ]
   },
   {
