--- a/data_collection_nobadwords.ipynb
+++ b/data_collection_nobadwords.ipynb
@@ -6,25 +6,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start off with replicating Jason Somers \n",
-    "# Top 50000 words from glove.42B.300d.zip were written to top_50000.txt\n",
-    "\n",
     "# Load libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import spatial\n",
     "from random import sample\n",
+    "import copy\n",
+    "import re\n",
+    "import nltk\n",
     "\n",
-    "# Load all data from massive embeddings file. You only need to do this once\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top 50000 words from glove.42B.300d.zip were written to top_50000.txt.\n",
+    "\n",
+    "# Load all data from massive embeddings file. You only need to do this once.\n",
+    "# Only adds nouns and proper nouns to \n",
     "embeddings_all = {}\n",
     "with open(\"./top_50000.txt\", 'r', encoding=\"utf8\") as f:\n",
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
-    "        if len(word) > 1 and word.isalpha(): \n",
+    "        tag = nltk.pos_tag([word])[0][1]\n",
+    "        if tag in ['NN', 'NNP'] and len(word) != 1:\n",
     "            vector = np.asarray(values[1:], \"float32\")\n",
     "            embeddings_all[word] = vector\n",
-    "        \n",
+    "\n",
+    "# Load list of codenames words.\n",
     "codenames_words = []\n",
     "with open(\"./codenames_words.txt\", 'r') as f:\n",
     "    for line in f:\n",
@@ -37,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose smaller sets of embeddings. \n",
+    "# Function for choosing smaller sets of embeddings. \n",
     "def embeddings_size(embeddings_size, embeddings_all):\n",
     "    #embeddings_size is the length of the subset of embeddings\n",
     "    #embeddings_all is the embeddings from 50k top words\n",
@@ -48,7 +63,10 @@
     "    #adds words from codenames that don't make it in the top XX words\n",
     "    for item in codenames_words:\n",
     "        if item not in embeddings:\n",
-    "            embeddings[item] = embeddings_all[item]\n",
+    "            try: \n",
+    "                embeddings[item] = embeddings_all[item]\n",
+    "            except KeyError: \n",
+    "                codenames_words.remove(item)\n",
     "            \n",
     "    return embeddings"
    ]
@@ -61,7 +79,9 @@
    "source": [
     "#embeddings_1000 = embeddings_size(1000, embeddings_all)\n",
     "#embeddings_5000 = embeddings_size(5000, embeddings_all)\n",
-    "embeddings_10000 = embeddings_size(10000, embeddings_all)"
+    "#embeddings_10000 = embeddings_size(10000, embeddings_all)\n",
+    "embeddings_25000 = embeddings_size(25000, embeddings_all)\n",
+    "embeddings_50000 = embeddings_size(50000, embeddings_all)"
    ]
   },
   {
@@ -77,30 +97,18 @@
     "def closest_words(embeddings, reference):\n",
     "    return sorted(embeddings.keys(), key=lambda w: distance(embeddings, w, reference))\n",
     "\n",
-    "#Changed. definied as wanting to maximize for a good clue\n",
+    "# Scoring function for generating clues based on sum of cosine distance\n",
     "def goodness(embeddings, word, answers):\n",
     "    if word in answers: return -999\n",
     "    return sum([distance(embeddings, word, a) for a in answers])\n",
     "\n",
-    "#Changed\n",
-    "def candidates(embeddings, answers, size=10):\n",
-    "    best = sorted(embeddings.keys(), key=lambda w: 1 * goodness(embeddings, w, answers))\n",
+    "# Chooses top candidates\n",
+    "def candidates(embeddings, answers, size=40):\n",
+    "    best = sorted(embeddings.keys(), key=lambda w: goodness(embeddings, w, answers))\n",
     "    #res = [(str(i + 1), \"{0:.2f}\".format(minimax(embeddings, w, answers)), w) \n",
     "           #for i, w in enumerate(sorted(best[:250], key=lambda w: -1 * minimax(embeddings, w, answers))[:size])]\n",
     "    \n",
-    "    # Modified to only return the top candidates rather than the scores since that's not important\n",
     "    return best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good = sample(codenames_words, 3)\n",
-    "print(good)\n",
-    "candidates(embeddings_10000, good)[0:20]"
    ]
   },
   {
@@ -127,15 +135,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from itertools import combinations \n",
+    "    \n",
+    "# Generates a single example (good words, top ten clues)\n",
     "def generate_single_example(codenames_words, embeddings):\n",
-    "    # Generates a single example (good words, bad words, top ten clues)\n",
+    "    # Enforce threshold for 'good' words\n",
+    "#     while True: \n",
+    "#         good = sample(codenames_words, 3)\n",
+    "#         combo_list = list(combinations(good, 2)) \n",
+    "#         threshold_list = [distance(embeddings_all, item[0], item[1]) > 0.5 for item in combo_list]\n",
+    "#         if all(good): \n",
+    "#             break\n",
     "    good = sample(codenames_words, 3)\n",
+    "        \n",
     "    clues = candidates(embeddings, good)\n",
+    "    \n",
+    "    # remove good words from clues\n",
+    "    for item in good: \n",
+    "        if item in clues:\n",
+    "            clues.remove(item)\n",
+    "                \n",
+    "    return good, clues[:10]\n",
     "\n",
-    "    return good, clues\n",
-    "\n",
+    "# Generates n examples and writes them to filename\n",
     "def write_n_examples(codenames_words, embeddings, n, filename): \n",
-    "    # Generates n examples and writes them to filename\n",
     "    output_file = open(filename, 'w')\n",
     "    \n",
     "    for i in range(n): \n",
@@ -156,6 +179,7 @@
    },
    "outputs": [],
    "source": [
+    "# Not necessary yet...\n",
     "def read_n_examples(filename):\n",
     "    '''Reads filename of good, bad, clues examples into a three-dimensional array. \n",
     "    To access the 0th example: data[0]\n",
@@ -184,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_n_examples(codenames_words, embeddings_1000, 100, 'examples_1000_vocab_nobadwords.txt')"
+    "write_n_examples(codenames_words, embeddings_50000, 10, 'examples_50000_vocab_nobadwords.txt')"
    ]
   },
   {
