data collection that doesnt work

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/prastutisingh/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/prastutisingh/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
    "source": [
     "# Top 50000 words from glove.42B.300d.zip were written to top_50000.txt\n",
     "\n",
@@ -12,7 +26,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import spatial\n",
+    "from random import sample\n",
     "import copy\n",
+    "import re\n",
+    "import nltk\n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
     "# Load all data from massive embeddings file. You only need to do this once\n",
     "embeddings_all = {}\n",
@@ -20,10 +40,12 @@
     "    for line in f:\n",
     "        values = line.split()\n",
     "        word = values[0]\n",
-    "        if len(word) > 1 and word.isalpha(): \n",
+    "        tag = nltk.pos_tag([word])[0][1]\n",
+    "        if tag in ['NN', 'NNP'] and len(word) != 1:\n",
     "            vector = np.asarray(values[1:], \"float32\")\n",
     "            embeddings_all[word] = vector\n",
-    "        \n",
+    "\n",
+    "# Load list of codenames words.\n",
     "codenames_words = []\n",
     "with open(\"./codenames_words.txt\", 'r') as f:\n",
     "    for line in f:\n",
@@ -32,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +69,17 @@
     "    #adds words from codenames that don't make it in the top XX words\n",
     "    for item in codenames_words:\n",
     "        if item not in embeddings:\n",
-    "            embeddings[item] = embeddings_all[item]\n",
+    "            try: \n",
+    "                embeddings[item] = embeddings_all[item]\n",
+    "            except KeyError: \n",
+    "                codenames_words.remove(item)\n",
     "            \n",
     "    return embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,26 +103,63 @@
     "    return sorted(embeddings.keys(), key=lambda w: distance(embeddings, w, reference))\n",
     "\n",
     "def goodness(embeddings, word, answers, bad):\n",
-    "    if word in answers + bad: return -999\n",
-    "    return sum([distance(embeddings, word, b) for b in bad]) - 1.0 * sum([distance(embeddings, word, a) \n",
-    "                                                                          for a in answers])\n",
+    "#     if word in answers + bad: return -999\n",
+    "    return sum([distance(embeddings, word, b) for b in bad]) - 4.0 * sum([distance(embeddings, word, a) for a in answers])\n",
     "\n",
     "def minimax(embeddings, word, answers, bad):\n",
-    "    if word in answers + bad: return -999\n",
+    "#     if word in answers + bad: return -999\n",
     "    return min([distance(embeddings, word, b) for b in bad]) - max([distance(embeddings, word, a) for a in answers])\n",
     "\n",
     "def candidates(embeddings, answers, bad, size=20):\n",
     "    best = sorted(embeddings.keys(), key=lambda w: -1 * goodness(embeddings, w, answers, bad))\n",
-    "    res = [(str(i + 1), \"{0:.2f}\".format(minimax(embeddings, w, answers, bad)), w) \n",
-    "           for i, w in enumerate(sorted(best[:250], key=lambda w: -1 * minimax(embeddings, w, answers, bad))[:size])]\n",
-    "    \n",
-    "    # Modified to only return the top candidates rather than the scores since that's not important\n",
+    "    res = [(str(i + 1), \"{0:.2f}\".format(minimax(embeddings, w, answers, bad)), w) for i, w in enumerate(sorted(best[:250], key=lambda w: -1 * minimax(embeddings, w, answers, bad))[:size])]\n",
     "    return [c[2] for c in res]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tong',\n",
+       " 'wok',\n",
+       " 'guan',\n",
+       " 'kitchenware',\n",
+       " 'nippon',\n",
+       " 'torino',\n",
+       " 'thanh',\n",
+       " 'jian',\n",
+       " 'bao',\n",
+       " 'jia',\n",
+       " 'omelette',\n",
+       " 'kan',\n",
+       " 'quan',\n",
+       " 'sheng',\n",
+       " 'ge',\n",
+       " 'savoy',\n",
+       " 'lyon',\n",
+       " 'shu',\n",
+       " 'intercontinental',\n",
+       " 'buffet']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answers = [\"iron\", \"ham\", \"beijing\"]\n",
+    "bad = [\"fall\", \"witch\", \"note\", \"cat\", \"bear\", \"ambulance\"]\n",
+    "candidates(embeddings_all, answers, bad, size=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,28 +177,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import sample\n",
-    "    \n",
+    "from itertools import combinations \n",
+    "\n",
     "def generate_single_example(codenames_words, embeddings):\n",
     "    # Generates a single example (good words, bad words, top ten clues)\n",
-    "    good = sample(codenames_words, 3)\n",
-    "    bad = sample(codenames_words, 1)\n",
+    "\n",
+    "    while True: \n",
+    "        good = sample(codenames_words, 3)\n",
+    "        combo_list = list(combinations(good, 2)) \n",
+    "        threshold_list = [distance(embeddings_all, item[0], item[1]) > 0.75 for item in combo_list]\n",
+    "        if all(good): \n",
+    "            break\n",
     "    \n",
-    "    while bad[0] in good: \n",
-    "        bad = sample(codenames_words, 1)\n",
+    "    bad = sample(codenames_words, 6)\n",
     "    \n",
+    "#     for i in range(len(bad)): \n",
+    "#         while bad[i] in good: \n",
+    "#             bad[i] = sample(codenames_words, 1)\n",
+    "    \n",
+    "    print(good)\n",
+    "    print(bad)\n",
     "    clues = candidates(embeddings, good, bad)\n",
     "    \n",
-    "    # remove plurals\n",
-    "    clues_2 = copy.deepcopy(clues)\n",
-    "    for item in clues_2: \n",
-    "        for word in clues_2: \n",
-    "            if item[:-1] == word: \n",
-    "                clues.remove(item)\n",
+    "    for item in good: \n",
+    "        if item in clues:\n",
+    "            clues.remove(item)\n",
     "\n",
     "    return good, bad, clues[:10]\n",
     "\n",
@@ -156,14 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7916841804981232"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance(embeddings_all, 'ham', 'iron')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -194,11 +277,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hood', 'kid', 'rome']\n",
+      "['bow', 'truck', 'death', 'box', 'worm', 'bond']\n",
+      "['undertaker', 'death', 'club']\n",
+      "['kangaroo', 'orange', 'tower', 'bark', 'phoenix', 'shot']\n",
+      "['wall', 'fish', 'pilot']\n",
+      "['triangle', 'doctor', 'nurse', 'dog', 'millionaire', 'tower']\n",
+      "['lemon', 'opera', 'lap']\n",
+      "['sprint', 'hospital', 'belt', 'alien', 'mammoth', 'time']\n",
+      "['triangle', 'mug', 'lock']\n",
+      "['mouth', 'telescope', 'berry', 'belt', 'box', 'africa']\n",
+      "['truck', 'kangaroo', 'opera']\n",
+      "['rock', 'lock', 'staff', 'eye', 'ivory', 'revolution']\n",
+      "['slip', 'whip', 'mercury']\n",
+      "['dwarf', 'bark', 'note', 'lab', 'slip', 'root']\n",
+      "['box', 'africa', 'novel']\n",
+      "['knife', 'himalaya', 'kiwi', 'lap', 'lab', 'doctor']\n",
+      "['europe', 'triangle', 'time']\n",
+      "['bank', 'cell', 'giant', 'antarctica', 'stick', 'sprint']\n",
+      "['fish', 'lap', 'worm']\n",
+      "['lock', 'horseshoe', 'knight', 'night', 'jam', 'turkey']\n"
+     ]
+    }
+   ],
    "source": [
-    "write_n_examples(codenames_words, embeddings_10000, 10, 'examples_10000_vocab.txt')\n",
+    "#write_n_examples(codenames_words, embeddings_10000, 10, 'examples_10000_vocab.txt')\n",
     "write_n_examples(codenames_words, embeddings_25000, 10, 'examples_25000_vocab.txt')"
    ]
   },
